# oldlspec

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
docs/: content.md  datatypes.md  everydayusers.md  implementations.md  index.md  keyvalue.md  pairs.md  regular.md  structure.md  texts.md
oldl/: __init__.py
