[tool.poetry]
name = "oldl"
version = "0.1.0"
description = "OLDL is a data language that is only presented in one line."
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
license = "CC BY-SA 4.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
